--- a/examples/bootstrap4.html
+++ b/examples/bootstrap4.html
@@ -29,22 +29,42 @@
             </div>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-4">
                     <h2>Table</h2>
                     <table class="table table-bordered">
                         <tr>
-                            <th>H1</th>    
-                            <th>H2</th>    
-                        </tr>    
+                            <th>Lorem</th>
+                            <th>ipsum</th>
+                            <th>dolor</th>
+                            <th>sit</th>
+                            <th>amet</th>
+                        </tr>
                         <tr>
-                            <td>Something</td>
-                            <td>Something</td>
+                            <td>1</td>
+                            <td>adipisicing</td>
+                            <td>elit</td>
+                            <td>Fuga</td>
+                            <td>suscipit</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>iure</td>
+                            <td>possimus</td>
+                            <td>cupiditate</td>
+                            <td>ullam</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>deleniti</td>
+                            <td>quaerat</td>
+                            <td>Modi</td>
+                            <td>quia</td>
                         </tr>
                     </table>
                 </div>
             </div>
             <div>
-                <h2>Form</h2>                    
+                <h2>Form</h2>
                 <div class="form-group col-2">
                     <label class="control-label">Name</label>
                     <input type="text" class="form-control">
@@ -65,6 +85,7 @@
 
             <div class="row">
                 <div class="col-4">
+                    <h2>Card</h2>
                     <div class="card">
                         <div class="card-header">
                             <h3>Card Title</h3>
@@ -75,14 +96,42 @@
                 </div>
             </div>
 
-        </div>
-        
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+            <div class="row">
+                <div class="col-6">
+                    <h2>Modal</h2>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        Launch demo modal
+                    </button>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci inventore fugiat, quia nihil, ea voluptatum vel eligendi aspernatur nobis suscipit maxime blanditiis itaque eaque dolores recusandae dignissimos quaerat magnam error.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
     </body>
 </html>
