--- a/examples/bootstrap4.html
+++ b/examples/bootstrap4.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        <link rel="stylesheet" href="../dist/styles.css">
+        <link rel="stylesheet" href="../dist/bootstrap-wireframe.min.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -13,120 +13,187 @@
         <![endif]-->
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <h1>Bootstrap 4 Wireframe Theme</h1>
-                    <p>Hello world! This is HTML5 Boilerplate.</p>
+                <div class="col-3">
+                    <h3>Components</h3>
+                    <ul>
+                        <li>Buttons</li>
+                        <li>Table
+                            <ul>
+                                <li>table</li>
+                                <li>table-bordered</li>
+                            </ul>
+                        </li>
+                        <li>Form</li>
+                        <li>Card</li>
+                        <li>Dropdown</li>
+                        <li>Modal</li>
+                    </ul>
                 </div>
-            </div>
+                <div class="col-9">
+                        <div class="row">
+                                <div class="col-12">
+                                    <h1>Bootstrap 4 Wireframe Theme</h1>
+                                    <p>Hello world! This is HTML5 Boilerplate.</p>
+                                </div>
+                            </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <h2>Buttons</h2>
-                    <button class="btn btn-default">Default</button>
-                    <button class="btn btn-primary">Primary</button>
-                    <button class="btn btn-success">Success</button>
-                </div>
-            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h2>Buttons</h2>
+                                    <button class="btn btn-default">Default</button>
+                                    <button class="btn btn-primary">Primary</button>
+                                    <button class="btn btn-success">Success</button>
+                                </div>
+                            </div>
 
-            <div class="row">
-                <div class="col-4">
-                    <h2>Table</h2>
-                    <table class="table table-bordered">
-                        <tr>
-                            <th>Lorem</th>
-                            <th>ipsum</th>
-                            <th>dolor</th>
-                            <th>sit</th>
-                            <th>amet</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>adipisicing</td>
-                            <td>elit</td>
-                            <td>Fuga</td>
-                            <td>suscipit</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>iure</td>
-                            <td>possimus</td>
-                            <td>cupiditate</td>
-                            <td>ullam</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>deleniti</td>
-                            <td>quaerat</td>
-                            <td>Modi</td>
-                            <td>quia</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div>
-                <h2>Form</h2>
-                <div class="form-group col-2">
-                    <label class="control-label">Name</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="form-group col-2">
-                    <label class="control-label">Animal</label>
-                    <select class="form-control">
-                        <option value="Dog">Dog</option>
-                        <option value="Cat">Cat</option>
-                    </select>
-                </div>
-                <div class="form-group col-2">
-                    <label class="control-label">Name</label>
-                    <textarea class="form-control">
-                    </textarea>
-                </div>
-            </div>
+                            <div class="row">
+                                <div class="col-4">
+                                    <h2>Table</h2>
+                                    <table class="table table-condensed">
+                                            <tr>
+                                                <th>Lorem</th>
+                                                <th>ipsum</th>
+                                                <th>dolor</th>
+                                                <th>sit</th>
+                                                <th>amet</th>
+                                            </tr>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>adipisicing</td>
+                                                <td>elit</td>
+                                                <td>Fuga</td>
+                                                <td>suscipit</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>iure</td>
+                                                <td>possimus</td>
+                                                <td>cupiditate</td>
+                                                <td>ullam</td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>deleniti</td>
+                                                <td>quaerat</td>
+                                                <td>Modi</td>
+                                                <td>quia</td>
+                                            </tr>
+                                        </table>
 
-            <div class="row">
-                <div class="col-4">
-                    <h2>Card</h2>
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>Card Title</h3>
+                                    <table class="table table-bordered">
+                                        <tr>
+                                            <th>Lorem</th>
+                                            <th>ipsum</th>
+                                            <th>dolor</th>
+                                            <th>sit</th>
+                                            <th>amet</th>
+                                        </tr>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>adipisicing</td>
+                                            <td>elit</td>
+                                            <td>Fuga</td>
+                                            <td>suscipit</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>iure</td>
+                                            <td>possimus</td>
+                                            <td>cupiditate</td>
+                                            <td>ullam</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>deleniti</td>
+                                            <td>quaerat</td>
+                                            <td>Modi</td>
+                                            <td>quia</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                            <div>
+                                <h2>Form</h2>
+                                <div class="form-group col-2">
+                                    <label class="control-label">Name</label>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <div class="form-group col-2">
+                                    <label class="control-label">Animal</label>
+                                    <select class="form-control">
+                                        <option value="Dog">Dog</option>
+                                        <option value="Cat">Cat</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-2">
+                                    <label class="control-label">Name</label>
+                                    <textarea class="form-control">
+                                    </textarea>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-4">
+                                    <h2>Card</h2>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h3>.card-header</h3>
+                                        </div>
+                                        <div class="card-body">.card-body</div>
+                                        <div class="card-footer">,card-footer</div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-4">
+                                    <h2>Dropdown</h2>
+                                    <div class="dropdown">
+                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            Dropdown
+                                        </button>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                            <button class="dropdown-item" type="button">Action</button>
+                                            <button class="dropdown-item" type="button">Another action</button>
+                                            <button class="dropdown-item" type="button">Something else here</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-6">
+                                    <h2>Modal</h2>
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                        Launch demo modal
+                                    </button>
+
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci inventore fugiat, quia nihil, ea voluptatum vel eligendi aspernatur nobis suscipit maxime blanditiis itaque eaque dolores recusandae dignissimos quaerat magnam error.
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                            </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-body">Lorem ipsum</div>
-                        <div class="card-footer">Footy</div>
-                    </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-6">
-                    <h2>Modal</h2>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                        Launch demo modal
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci inventore fugiat, quia nihil, ea voluptatum vel eligendi aspernatur nobis suscipit maxime blanditiis itaque eaque dolores recusandae dignissimos quaerat magnam error.
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
