--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        <link rel="stylesheet" href="../dist/bootstrap-wireframe.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap-wireframes/dist/bootstrap-wireframes.min.css">
     </head>
     <body>
         <!--[if lte IE 9]>
