Still tweaking mobile display

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             </li>
         </nav>
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
-                    <div class="col-12 col-md-4">
+                    <div class="col-11 col-md-4">
                         <h1>Bootstrap Wireframes</h1>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-8 col-md-4">
+                <div class="col-11 col-md-4">
                     <h2>Buttons</h2>
                     <button class="btn btn-default">Default</button>
                     <button class="btn btn-primary">Primary</button>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-12 col-md-4">
+                <div class="col-11 col-md-4">
                     <h2>Table</h2>
                     <table class="table table-condensed">
                             <tr>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-8 col-md-4">
+                <div class="col-11 col-md-4">
                     <h2>Form</h2>
                     <div class="form-group col-12">
                         <label class="control-label">Name</label>
@@ -127,7 +127,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-8 col-md-4">
+                <div class="col-11 col-md-4">
                     <h2>Card</h2>
                     <div class="card">
                         <div class="card-header">
@@ -140,7 +140,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-8 col-md-4">
+                <div class="col-11 col-md-4">
                     <h2>Dropdown</h2>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -156,7 +156,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-8 col-md-4">
+                <div class="col-11 col-md-4">
                     <h2>Modal</h2>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
